...

    <string name="banner_upgrade_app">ca-app-pub-2263309867862585/2169124155</string>
    <string name="banner_help">ca-app-pub-2263309867862585/8556953358</string>
    <!-- AdMob ad unit IDs -->

    <string name="title_activity_upgrade_page">Upgrade_page</string>
    <string name="save">SAVE</string>
    <string name="item_entered">Item entered</string>
    <string name="items_entered">Items entered</string>
    <string name="app_logo">app logo</string>
    <string name="the_cash_green_icon">cash_entry_icon</string>
    <string name="item_cash">Item</string>
    <string name="cost_expense">Cost</string>
...
